--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,11 +45,20 @@
 <script>
     $(document).ready(function() {
         $("#employeeTable").DataTable({
-            'aoColumnDefs': [{
-                'bSortable': false,
-                'aTargets': [-1]
-            }]
-        });
+                'info':false,
+                'searching': true,
+                'paging': true,
+                'search': {
+                    'addClass': 'form-control input-lg col-xs-12'
+                },
+            'fnDrawCallback':function(){
+                $("input[type='search']").attr("id", "searchBox");
+                $('#dialPlanListTable').css('cssText', "margin-top: 0px !important;");
+                $("select[name='dialPlanListTable_length'], #searchBox").removeClass("input-sm");
+                $('#searchBox').css("width", "300px").focus();
+                $('#dialPlanListTable_filter').removeClass('dataTables_filter');
+            }
+            });
     })
 </script>
 </body>
